--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
       <!-- Review 2 -->
       <div class="p-6 bg-[#14213b] rounded-xl shadow-lg hover:-translate-y-2 transition transform duration-300">
         <div class="flex flex-col items-center text-center">
-          <img src="/assets/nupur.jpg" alt="Client 2" class="w-24 h-24 rounded-full border-4 border-cyan-400 mb-4 object-cover" />
+          <img src="./assets/nupur.jpg" alt="Client 2" class="w-24 h-24 rounded-full border-4 border-cyan-400 mb-4 object-cover" />
           <h4 class="text-xl font-semibold text-white mb-1">Fahima Haque Nupur</h4>
           <p class="text-gray-400 text-sm mb-3">Project Manager — CodeWave</p>
           <p class="text-gray-300 text-sm italic">
@@ -495,7 +495,7 @@
       <!-- Review 3 -->
       <div class="p-6 bg-[#14213b] rounded-xl shadow-lg hover:-translate-y-2 transition transform duration-300">
         <div class="flex flex-col items-center text-center">
-          <img src="/assets/binty.jpg" alt="Client 3" class="w-24 h-24 rounded-full border-4 border-cyan-400 mb-4 object-cover" />
+          <img src="./assets/binty.jpg" alt="Client 3" class="w-24 h-24 rounded-full border-4 border-cyan-400 mb-4 object-cover" />
           <h4 class="text-xl font-semibold text-white mb-1">Zafrin Binty</h4>
           <p class="text-gray-400 text-sm mb-3">Entrepreneur — Brandify</p>
           <p class="text-gray-300 text-sm italic">
