--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
       <div class="p-6 bg-[#14213b] rounded-xl shadow-lg hover:-translate-y-2 transition transform duration-300">
         <div class="flex flex-col items-center text-center">
           <img src="https://i.pravatar.cc/120?img=12" alt="Client 1" class="w-24 h-24 rounded-full border-4 border-cyan-400 mb-4 object-cover" />
-          <h4 class="text-xl font-semibold text-white mb-1">Ayesha Rahman</h4>
+          <h4 class="text-xl font-semibold text-white mb-1">Yash Rahman</h4>
           <p class="text-gray-400 text-sm mb-3">Founder — AR Web Solutions</p>
           <p class="text-gray-300 text-sm italic">
             “Working with Anika was a delight! She built my website exactly as I envisioned — modern, responsive, and fast. Her dedication and communication were outstanding.”
