Fixed achivement section

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       <div class="p-6 bg-[#14213b] rounded-xl shadow-lg hover:scale-105 transition">
         <div class="text-cyan-400 text-4xl mb-3"><i class="fa-solid fa-flask"></i></div>
         <h4 class="font-semibold text-white mb-2">42nd National Science & Technology Week — Science Fair</h4>
-        <p class="text-gray-300 text-sm mb-1">Sub-district level — Senior Group Project Presentation — 1st Place</p>
+        <p class="text-gray-300 text-sm mb-1">Senior Group Project Presentation — 1st Place</p>
         <p class="text-gray-400 text-sm">Organized by Upazila Administration — 2020</p>
       </div>
 
@@ -379,9 +379,8 @@
        <!-- Math Competition -->
       <div class="p-6 bg-[#14213b] rounded-xl shadow-lg hover:scale-105 transition">
         <div class="text-cyan-400 text-4xl mb-3"><i class="fa-solid fa-calculator"></i></div>
-        <h4 class="font-semibold text-white mb-2">Math Competition-41nd National Science & Technology Week</h4>
-        <p class="text-gray-300 text-sm mb-1">District Level — 1st Place</p>
-        <p class="text-gray-400 text-sm">Organized by Zila School — 2019</p>
+        <h4 class="font-semibold text-white mb-2">Math Competition-41nd National Science & Technology Week— 2019</h4>
+        <p class="text-gray-300 text-sm mb-1"> 1st Place</p>
       </div>
 
      
