--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="flex gap-4 mb-6">
           <a class="bg-cyan-500 hover:bg-cyan-400 text-white px-5 py-2 rounded-full font-semibold transition" href="#contact">Contact</a>
-          <a class="border border-cyan-400 px-5 py-2 rounded-full text-gray-200 hover:bg-cyan-400 hover:text-black transition" href="./assets/Anika Saida (1).pdf"  target="_blank">Download CV</a>
+          <a class="border border-cyan-400 px-5 py-2 rounded-full text-gray-200 hover:bg-cyan-400 hover:text-black transition" download href="./assets/anika's-cv.pdf">Download CV</a>
         </div>
       </div>
 
@@ -382,9 +382,6 @@
         <h4 class="font-semibold text-white mb-2">Math Competition-41nd National Science & Technology Week— 2019</h4>
         <p class="text-gray-300 text-sm mb-1"> 1st Place</p>
       </div>
-
-     
-
      
 
     </div>
